[tool.poetry]
name = "yatwin"
version = "0.1.0"
description = "Python 3 API for Yatwin and Vstarcam IP Cameras"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
