[tool.poetry]
name = "yatwin"
version = "0.1.0"
description = "Python 3 API for Yatwin and Vstarcam IP Cameras"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "^0.2.0"
opencv-python = "^4.6.0"
onvif-zeep = "^0.2.12"
comtypes = "^1.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
